--- a/Project2/Milestone 4/css/main.css
+++ b/Project2/Milestone 4/css/main.css
@@ -49,7 +49,7 @@ a {
 /* Tooltip */
 .tooltip {
   position: absolute;
-  top: -9000rem;
+  left: -9000rem;
   left: -9000rem;
   padding: 10px 15px;
   background-color: rgba(176,176,171, 0.8);
